--- a/index.html
+++ b/index.html
@@ -4,92 +4,88 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>String Manipulator</title>
+    <meta name="description" content="Tool sederhana untuk mempermudah pekerjaan Anda">
+    <script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool' url="https://nyenyenye.lol/blocked.html"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="script.js"></script>
 </head>
 <body class="bg-gradient-to-br from-indigo-100 to-purple-100 min-h-screen">
-    <div class="container mx-auto px-4 py-8">
-        <h1 class="text-4xl font-bold text-center text-indigo-600 mb-8">String Manipulator</h1>
+    <div class="container mx-auto px-8 py-8 max-w-7xl">
+        <div class="text-center mb-12">
+            <h1 class="text-5xl font-bold text-indigo-600 mb-3">String Manipulator</h1>
+            <p class="text-gray-600 text-lg">Tool sederhana untuk mempermudah pekerjaan Anda</p>
+        </div>
         
-        <div class="max-w-4xl mx-auto bg-white rounded-lg shadow-lg">
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                <!-- Input Section (Kiri) -->
-                <div class="p-6 border-r border-gray-200">
-                    <label class="block text-gray-700 text-sm font-bold mb-2" for="inputText">
+        <div class="mx-auto bg-white rounded-2xl shadow-xl overflow-hidden border border-gray-100">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6 bg-gradient-to-br from-gray-50 to-white">
+                <div class="p-8 border-r border-gray-200">
+                    <label class="block text-gray-700 font-bold mb-3 text-lg" for="inputText">
                         Masukkan Teks:
                     </label>
                     <textarea
                         id="inputText"
-                        class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500"
-                        rows="4"
+                        class="w-full h-[180px] px-4 py-3 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent transition-all duration-200 resize-none"
                         placeholder="Ketik atau paste teks di sini..."
                     ></textarea>
                 </div>
 
-                <!-- Output Section (Kanan) -->
-                <div class="p-6">
-                    <div class="flex justify-between items-center mb-2">
-                        <label class="block text-gray-700 text-sm font-bold">
+                <div class="p-8 bg-opacity-50">
+                    <div class="flex justify-between items-center mb-3">
+                        <label class="block text-gray-700 font-bold text-lg">
                             Hasil:
                         </label>
-                        <div class="space-x-2">
-                            <button onclick="copyOutput()" class="px-3 py-1 bg-green-500 text-white rounded-lg hover:bg-green-600 text-sm">
+                        <div class="space-x-3">
+                            <button onclick="copyOutput()" class="px-4 py-2 bg-green-500 text-white rounded-xl hover:bg-green-600 transition-all duration-200 transform hover:scale-105">
                                 Copy
                             </button>
-                            <button onclick="clearText()" class="px-3 py-1 bg-red-500 text-white rounded-lg hover:bg-red-600 text-sm">
+                            <button onclick="clearText()" class="px-4 py-2 bg-red-500 text-white rounded-xl hover:bg-red-600 transition-all duration-200 transform hover:scale-105">
                                 Clear
                             </button>
                         </div>
                     </div>
-                    <div id="outputText" class="w-full px-3 py-2 bg-gray-50 border border-gray-300 rounded-lg min-h-[100px] whitespace-pre-wrap break-words"></div>
+                    <div id="outputText" class="w-full h-[180px] px-4 py-3 bg-gray-50 border border-gray-200 rounded-xl whitespace-pre-wrap break-words shadow-inner overflow-auto"></div>
                 </div>
             </div>
 
-            <!-- Tools Section -->
             <div class="border-t border-gray-200">
-                <!-- Tab Navigation -->
-                <nav class="flex flex-wrap border-b border-gray-200">
-                    <button onclick="switchTab('basic')" id="basicTab" class="tab-btn active">
+                <nav class="flex flex-wrap border-b border-gray-200 bg-gray-50">
+                    <button onclick="switchTab('basic')" id="basicTab" class="tab-btn active px-6 py-3 font-medium transition-all duration-200">
                         Basic Tools
                     </button>
-                    <button onclick="switchTab('advanced')" id="advancedTab" class="tab-btn">
+                    <button onclick="switchTab('advanced')" id="advancedTab" class="tab-btn px-6 py-3 font-medium transition-all duration-200">
                         Advanced Tools
                     </button>
-                    <button onclick="switchTab('replace')" id="replaceTab" class="tab-btn">
+                    <button onclick="switchTab('replace')" id="replaceTab" class="tab-btn px-6 py-3 font-medium transition-all duration-200">
                         Replace Tools
                     </button>
                 </nav>
 
-                <!-- Tab Contents -->
-                <div class="p-6">
-                    <!-- Basic Tools Tab -->
+                <div class="p-8">
                     <div id="basicTools" class="tab-content active">
-                        <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
-                            <button onclick="transformText('uppercase')" class="transform-btn">
+                        <div class="grid grid-cols-2 md:grid-cols-3 gap-6">
+                            <button onclick="transformText('uppercase')" class="transform-btn hover:scale-105 transition-transform duration-200">
                                 UPPERCASE
                             </button>
-                            <button onclick="transformText('lowercase')" class="transform-btn">
+                            <button onclick="transformText('lowercase')" class="transform-btn hover:scale-105 transition-transform duration-200">
                                 lowercase
                             </button>
-                            <button onclick="transformText('capitalize')" class="transform-btn">
+                            <button onclick="transformText('capitalize')" class="transform-btn hover:scale-105 transition-transform duration-200">
                                 Capitalize Each Word
                             </button>
-                            <button onclick="transformText('reverse')" class="transform-btn">
+                            <button onclick="transformText('reverse')" class="transform-btn hover:scale-105 transition-transform duration-200">
                                 Reverse Text
                             </button>
-                            <button onclick="transformText('removeSpaces')" class="transform-btn">
+                            <button onclick="transformText('removeSpaces')" class="transform-btn hover:scale-105 transition-transform duration-200">
                                 Remove Spaces
                             </button>
-                            <button onclick="transformText('countChars')" class="transform-btn">
+                            <button onclick="transformText('countChars')" class="transform-btn hover:scale-105 transition-transform duration-200">
                                 Count Characters
                             </button>
                         </div>
                     </div>
 
-                    <!-- Advanced Tools Tab -->
                     <div id="advancedTools" class="tab-content hidden">
                         <div class="space-y-4">
-                            <!-- Typo Rules -->
                             <div class="bg-gray-50 p-4 rounded-lg">
                                 <div class="flex justify-between items-center mb-4">
                                     <h3 class="text-lg font-semibold">Perbaikan Typo</h3>
@@ -123,7 +119,6 @@
                                 </div>
                             </div>
 
-                            <!-- Other Tools -->
                             <div class="bg-gray-50 p-4 rounded-lg">
                                 <h3 class="text-lg font-semibold mb-2">Tools Lainnya</h3>
                                 <div class="space-y-2">
@@ -140,7 +135,6 @@
                         </div>
                     </div>
 
-                    <!-- Replace Tools Tab -->
                     <div id="replaceTools" class="tab-content hidden">
                         <div class="space-y-4">
                             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
@@ -203,29 +197,31 @@
         </div>
     </div>
 
-    <footer class="mt-8 pb-8 text-center">
-        <div class="max-w-4xl mx-auto px-4">
-            <div class="p-4 bg-white rounded-lg shadow-lg">
-                <div class="flex flex-col md:flex-row justify-between items-center gap-4">
+    <footer class="mt-12 pb-8 text-center">
+        <div class="mx-auto px-8 max-w-7xl">
+            <div class="p-6 bg-gradient-to-br from-white to-gray-50 rounded-2xl shadow-xl border border-gray-100">
+                <div class="flex flex-col md:flex-row justify-between items-center gap-6">
                     <div class="text-left">
-                        <h3 class="text-lg font-semibold text-indigo-600">String Manipulator</h3>
-                        <p class="text-gray-600 text-sm">Tool untuk memanipulasi teks dengan berbagai fitur</p>
+                        <h3 class="text-xl font-bold text-indigo-600 mb-1">String Manipulator</h3>
+                        <p class="text-gray-600">Tool untuk memanipulasi teks dengan berbagai fitur</p>
                     </div>
-                    <div class="flex gap-4">
-                        <a href="https://github.com/yourusername" target="_blank" class="text-gray-600 hover:text-indigo-600 transition-colors">
+                    <div class="flex gap-6">
+                        <a href="https://instagram.com/ccnvxx_" target="_blank" 
+                           class="text-gray-600 hover:text-indigo-600 transition-all duration-200 transform hover:scale-110">
                             <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-                                <path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd"></path>
+                                <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
                             </svg>
                         </a>
-                        <a href="https://www.linkedin.com/in/yourusername" target="_blank" class="text-gray-600 hover:text-indigo-600 transition-colors">
+                        <a href="https://t.me/n008_1" target="_blank"
+                           class="text-gray-600 hover:text-indigo-600 transition-all duration-200 transform hover:scale-110">
                             <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-                                <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
+                                <path d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 12 0a12 12 0 0 0-.056 0zm4.962 7.224c.1-.002.321.023.465.14a.506.506 0 0 1 .171.325c.016.093.036.306.02.472-.18 1.898-.962 6.502-1.36 8.627-.168.9-.499 1.201-.82 1.23-.696.065-1.225-.46-1.9-.902-1.056-.693-1.653-1.124-2.678-1.8-1.185-.78-.417-1.21.258-1.91.177-.184 3.247-2.977 3.307-3.23.007-.032.014-.15-.056-.212s-.174-.041-.249-.024c-.106.024-1.793 1.14-5.061 3.345-.48.33-.913.49-1.302.48-.428-.008-1.252-.241-1.865-.44-.752-.245-1.349-.374-1.297-.789.027-.216.325-.437.893-.663 3.498-1.524 5.83-2.529 6.998-3.014 3.332-1.386 4.025-1.627 4.476-1.635z"/>
                             </svg>
                         </a>
                     </div>
                     <div class="text-right">
-                        <p class="text-gray-600 text-sm">Dibuat oleh <span class="font-semibold">Nama Anda</span></p>
-                        <p class="text-gray-500 text-xs">© 2024 String Manipulator</p>
+                        <p class="text-gray-600">Dibuat oleh <span class="font-bold text-indigo-600">Mahaka Projects</span></p>
+                        <p class="text-gray-500 mt-1">© 2025 String Manipulator</p>
                     </div>
                 </div>
             </div>
